@@ -2,9 +2,6 @@
 ## $Id$
 ##
 
-
-PGMS = $(ARCH)/start.o
-
 S_FILES = start.S
 S_O_FILES = $(S_FILES:%.S=$(ARCH)/%.o)
 
@@ -19,6 +16,8 @@ include $(top_srcdir)/../../../../../../automake/lib.am
 #
 # (OPTIONAL) Add local stuff here using +=
 #
+
+bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o
 
 $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o: $(ARCH)/start.o
 	$(INSTALL_DATA) $< $@
